flambda-backend/tests/simd/errors/i8c1.expected
File "i8c1.ml", line 1:
Error: Did not find constant int arguments for caml_int8x16_const1
